# Informatica-industrial-25-26

./: .gitignore
Ejercicio1_T3/: main.c
Tema_3/Ejercicio1_T3/: CMakeLists.txt  main.c
Tema_3/Ejercicio2_T3/: CMakeLists.txt  main.c
Tema_3/Ejercicio3_T3/: CMakeLists.txt  README.me
Tema_3/Ejercicio3_T3/include/: stats.h
Tema_3/Ejercicio3_T3/src/: main.c  stats.c
Tema_4/Parte_A/: CMakeLists.txt
Tema_4/Parte_A/include/: funciones.h
Tema_4/Parte_A/src/: funciones.c  main.c
Tema_4/Parte_B/: CMakeLists.txt
Tema_4/Parte_B/include/: productos.h
Tema_4/Parte_B/src/: inventario.csv  main.c  productos.c
